--- a/style.css
+++ b/style.css
@@ -34,8 +34,14 @@ ul#projects li {
 }
 
 h1, h2, h3 {
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 10px;
 
+}
+
+p {
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 a:link, a:visited {
@@ -54,6 +60,15 @@ img#skills {
 .small {
 
     font-size: 10px;
+}
+
+div.quote {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 13px;
 }
 
 header {
