--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,20 @@
             font-weight: bold;
         }
 
-        nav li#logo a:link, nav li#logo a:visited {
+        nav li#logo {
             float: left;
             margin-right: 60px;
+        }
+
+        nav li.link {
+            display: block;
+            float: right;
+
+            margin-left: 35px;
+            margin-right: 0;
+            margin-top: 2px;
+
+            font-size: 14px;
         }
 
         nav li.link a:link, nav li.link a:visited {
@@ -281,13 +292,13 @@
                 <a href="http://chutsu.github.io//index.html">chris choi</a>
             </li>
             <li class="link">
-                <a href="http://chutsu.github.io/index.html">blog</a>
+                <a href="http://chutsu.github.io//about.html">about</a>
             </li>
             <li class="link">
                 <a href="http://chutsu.github.io/projects.html">projects</a>
             </li>
             <li class="link">
-                <a href="http://chutsu.github.io//about.html">about</a>
+                <a href="http://chutsu.github.io/index.html">blog</a>
             </li>
         </ul>
     </nav>
