Update nav links

--- a/templates/base.html
+++ b/templates/base.html
@@ -289,7 +289,7 @@
     <nav>
         <ul>
             <li id="logo">
-                <a href="http://chutsu.github.io//index.html">chris choi</a>
+                <a href="http://chutsu.github.io/index.html">chris choi</a>
             </li>
             <li class="link">
                 <a href="http://chutsu.github.io//about.html">about</a>
