--- a/templates/base.html
+++ b/templates/base.html
@@ -308,5 +308,9 @@
     <footer>
         Designed By Chris Choi
     </footer>
+
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(100689323); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100689323ns.gif" /></p></noscript>
 </body>
 </html>
