--- a/templates/index.html
+++ b/templates/index.html
@@ -19,34 +19,39 @@
     <ul id="projects">
         <li>
             <a href="https://github.com/chutsu/playground">playground</a>:
-            genetic programming framework in Python.
+            Genetic programming library in Python.
         </li>
         <li>
-            <a href="https://github.com/wallarelvo/Bowtie">bowtie</a>:
-            mobile phone sensory data collector in Go/JavaScript/HTML5.
+            <a href="https://github.com/chutsu/CRoPS">CRoPS</a>:
+            Combined Roadmaps and Potentials for Swarms.
+        </li>
+        <li>
+            <a href="https://github.com/wallarelvo/Bowtie">Bowtie</a>:
+            Mobile phone sensory data collector in Go/JavaScript/HTML5.
         </li>
     </ul>
 
     <h3>Other Side Projects:</h3>
     <ul id="projects">
         <li>
-            <a href="https://github.com/chutsu/evolve">evolve</a>: Genetic
-            Algorithm in C.
+            <a href="https://github.com/chutsu/evolve">evolve</a>:
+            Genetic algorithm in C.
         </li>
         <li>
-            <a href="https://github.com/chutsu/dstruct">dstruct</a>: useful
-            common data structures in C.
+            <a href="https://github.com/chutsu/dstruct">dstruct</a>:
+            Common data structures in C.
         </li>
         <li>
-            <a href="https://github.com/chutsu/al">al</a>: generic algorithms
-            such as sort and search implemented in C.
+            <a href="https://github.com/chutsu/al">al</a>:
+            Generic algorithms such as sort and search implemented in C.
         </li>
         <li>
-            <a href="https://github.com/chutsu/munit">munit</a>: useful minimal
-            unit testing in C.
+            <a href="https://github.com/chutsu/munit">munit</a>:
+            Minimal unit testing in C.
         </li>
         <li>
-            <a href="https://github.com/chutsu/dbg">dbg</a>: debug macros in C.
+            <a href="https://github.com/chutsu/dbg">dbg</a>:
+            Debug macros in C.
         </li>
     </ul>
 
@@ -124,7 +129,7 @@
             <b class="author">Choi, C</b>. (2013, March).
             What am I doing? Presented at
             <a href="http://home.btconnect.com/theburn/">
-                The Burn 
+                The Burn
             </a>. As part of the PhD program at the School of Computer Science.
         </li>
         <li class="listing">
@@ -144,8 +149,8 @@
                 Benchmarking MongoDB and Couchbase No-SQL Databases
             </a>.
             Presented in <a href="http://www.jisc.ac.uk">JISC</a> (London),
-            an internal face to face meeting with the 
-            <a href="http://www.analyzingsocialmedia.org"> 
+            an internal face to face meeting with the
+            <a href="http://www.analyzingsocialmedia.org">
                 Analysing Social Media Collaboration
             </a>.
         </li>
@@ -153,7 +158,7 @@
 
     <h3>Lab Demonstration</h3>
     <ul id="listings">
-        <li class="year">2013</li> 
+        <li class="year">2013</li>
         <li class="listing">
         CS1002 - Objecet Oriented Programming
         </li>
