--- a/templates/index.html
+++ b/templates/index.html
@@ -156,6 +156,16 @@
         </li>
     </ul>
 
+    <h3>Participation</h3>
+    <ul id="listings">
+        <li class="listing">
+            <b>2013 11/14 -</b>
+            <a href="http://www.youtube.com/watch?v=EGiZCwXfVYM&t=0m37s">
+                Witlr Hackathon
+            </a>at University of St Andrews
+        </li>
+    </ul>
+
     <h3>Lab Demonstration</h3>
     <ul id="listings">
         <li class="year">2013</li>
