--- a/css/chutsu.css
+++ b/css/chutsu.css
@@ -59,6 +59,65 @@ li {
     margin-bottom: 7px;
 }
 
+ul#showreel {
+    width: 500px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    padding: 0;
+    padding-top: 30px;
+
+    /* border:1px solid black; */
+}
+
+ul#showreel li.section {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+ul#showreel_element {
+    overflow: auto;
+
+    min-height: 130px;
+    width: 450px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    padding: 0;
+}
+
+li.description {
+    width: 400px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    /* border:1px solid black; */
+}
+
+li.description pre {
+    display: inline;
+
+    margin: 0;
+
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0;
+    padding-bottom: 0;
+
+    color: #FFF;
+    font-family: monospace, Courier, "Courier New";
+
+    background-color: #666;
+    border-radius: 5px;
+}
+
+li.description p {
+    margin-top: 0;
+}
+
 span.date {
     display: inline-block;
     width: 100px;
@@ -123,6 +182,19 @@ blockquote {
     font-style: italic;
 }
 
+span.red {
+    color: red;
+}
+
+span.green {
+    color: green;
+}
+
+span.blue {
+    color: blue;
+}
+
+
 a:link, a:visited {
     color: #0e73d6;
     font-weight: bold;
@@ -148,6 +220,12 @@ section {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+section#home section#intro {
+    width: 500px;
+    font-size: 24px;
+
 }
 
 section#content section {
